<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FloorShift</string>
    <string name="tutorial">Tutorial</string>
    <string name="get_started">Get Started</string>
    <string name="login">LOGIN</string>
    <string name="join_now">JOIN NOW</string>
    <string name="action_settings">Settings</string>
    <string name="hint_email">Email</string>
    <string name="hint_nickname">Nick Name</string>
    <string name="hint_confirm">Confirm Password</string>
    <string name="hint_password">Password</string>
    <string name="hint_phone">Phone Number</string>
    <string name="forgot_enter_email_address">Enter Email Address</string>
    <string name="record">Record</string>
    <string name="read_more"><u>read more</u></string>
    <string name="help_notify">What other problems are you having?</string>
    <string name="call">Call</string>
    <string name="email">Email</string>
    <string name="text">Text</string>
    <string name="video">Video</string>
    <string name="photo">Photo</string>
    <string name="playlist">Playlist</string>
    <string name="playlist_hsitory">Playlist History</string>
    <string name="about">ABOUT US</string>
    <string name="help">HELP</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="djs">DJs</string>
    <string name="name">NAME</string>
    <string name="media">MEDIA</string>
    <string name="contact">CONTACT</string>
    <string name="recording">RECORDING</string>
    <string name="profile">PROFILE</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="message">MESSAGES</string>
    <string name="floor">FLOOR</string>
    <string name="terms_signup">I have read and understood the terms and conditions.</string>
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >me</item>
        <item >People</item>
        <item >Catalog</item>
        <item >Add to Catalog</item>
        <item >Take a Selfie</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_catalog</item>
        <item>@drawable/ic_add_catalog</item>
        <item>@drawable/ic_selfie</item>
    </array>

    <string-array name="tutorial_txts">
        <item>Tutorial one</item>
        <item>Tutorial Two</item>
        <item>Tutorial Threee</item>
        <item>Tutorial Four</item>
    </string-array>
    <integer-array name="tutorial_imgs">
        <item>@drawable/tmp_contact</item>
        <item>@drawable/tmp_contact</item>
        <item>@drawable/tmp_contact</item>
        <item>@drawable/tmp_contact</item>
    </integer-array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <string name="forgot_password_success">Your password has been sent to your email address.</string>
    <string name="forgot_password_error">Please enter a valid email address.</string>
    <string name="forgot_password_no_email">Could not connect. Try again later.</string>

    <!-- location service -->
    <string name="no_gps_support">GPS provider not supported</string>
    <string name="no_network_support">Network provider not supported</string>
    <string name="google_api_key">AIzaSyAfsbv6mY4_3L44tOCPF6wO16l3Cj9Effw</string>
</resources>
