<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".LoginActivity">

    <include layout="@layout/titlebar"/>

    <ScrollView
        android:layout_below="@+id/lay_titlebar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_marginTop="36dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/rounded_corners"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/edit_nickname"
                        style="@style/HoT.EditText"
                        android:layout_margin="5dp"
                        android:hint="@string/hint_nickname"
                        android:inputType="textPersonName"
                        android:padding="5dp" />

                    <View style="@style/HoT.LoginSeparator" />

                    <EditText
                        android:id="@+id/edit_email"
                        style="@style/HoT.EditText"
                        android:layout_margin="5dp"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:padding="5dp" />

                    <View style="@style/HoT.LoginSeparator" />

                    <EditText
                        android:id="@+id/edit_password"
                        style="@style/HoT.EditText"
                        android:layout_margin="5dp"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:padding="5dp" />

                    <View style="@style/HoT.LoginSeparator" />

                    <EditText
                        android:id="@+id/edit_confirm"
                        style="@style/HoT.EditText"
                        android:layout_margin="5dp"
                        android:hint="@string/hint_confirm"
                        android:inputType="textPassword"

                        android:padding="5dp" />
                    <View style="@style/HoT.LoginSeparator" />

                    <EditText
                        android:id="@+id/edit_phone"
                        style="@style/HoT.EditText"
                        android:layout_margin="5dp"
                        android:hint="@string/hint_phone"
                        android:inputType="phone"
                        android:padding="5dp" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_marginTop="@dimen/dimen_20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <CheckBox
                        android:id="@+id/check_term"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dimen_8"
                        android:checked="false"
                        android:text="@string/terms_signup"
                        android:textColor="@android:color/black" />

                </RelativeLayout>

                <ImageButton
                    android:clickable="true"
                    android:onClick="onSignUpClick"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/btn_signup_selector"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>


        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
